# news-api

./: pyproject.toml
news_api/: __init__.py  constants.py  db.py  exceptions.py  news.py  nlp.py  resources.py  tasks.py
tests/: conftest.py  test_integration.py  test_news_api.py  test_nlp.py  test_scrape.py
tests/data/: init_data.sql  news_data.pickle
