[tool.poetry]
name = "news-api"
version = "0.1.0"
description = ""
authors = ["Ajit Nath <nath.ajit01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
spacy = "^2.2.3"
pandas = "^0.25.3"
feedparser = "^5.2.1"
bs4 = "^0.0.1"
requests = "^2.22.0"
flask-restful = "^0.3.7"
celery = "^4.4.0"
redis = "^3.3.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
